# teste-backend-4ps

./: docker-compose.yml  dockerfile  pyproject.toml
app/: main.py
app/core/: config.py  database.py  security.py
app/routers/: auth.py
app/schemas/: onboarding.py
app/services/: setup_company.py
