[project]
name = "sistema-4ps"
version = "0.1.0"
description = "Backend API for 4Ps Gestão"
authors = [
    {name = "4Ps Gestão",email = "4psgestao@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.133.1,<0.134.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "supabase (>=2.28.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"